kube/snort-srv.yml
apiVersion: v1
kind: Service
metadata:
  name: snort
  namespace: default
spec:
  ports:
    - port: 115
      targetPort: 8080
  selector:
    service: snort
  type: NodePort
